fix spacing and style form

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
   --img-url: url(img/inaki-del-olmo-NIJuEQw0RKg-unsplash.jpg);
   --bg-white: hsla(0, 0%, 93%, 1);
   --text-colour: #303030;
+
+  --ratio: 3.74;
 }
 
 * {
@@ -9,10 +11,13 @@
   padding: 0;
   margin: 0;
 
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
   color: var(--text-colour);
 }
 
-.background-img {
+.background_img {
   height: 100dvh;
   width: 100dvw;
   background: linear-gradient(
@@ -22,25 +27,20 @@
     ),
     var(--img-url);
   background-size: cover;
-  aspect-ratio: 4 3;
-
-  /* margin: 1rem 2rem; */
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.grid-div {
+.grid_div {
   display: grid;
-  grid-template-rows: auto 1fr auto;
-  /* gap: 0.5rem; */
+  grid-template-rows: minmax(50px, auto) 1fr minmax(50px, auto);
   align-items: center;
 
   width: 75%;
-  height: 100vh;
+  height: 100dvh;
   margin: 0 auto;
 
   background: var(--bg-white);
-
-  position: relative;
-  z-index: 1;
 }
 
 .overlay {
@@ -73,20 +73,149 @@ main {
   height: 100%;
 }
 
-.add-book-btn {
-  margin: 1rem;
+.add_book_btn {
+  margin-top: 1rem;
   padding: 0.6rem 1rem;
 }
 
-.book-form {
-  width: 75%;
+:modal {
+  background-color: #ffffff;
+
+  width: clamp(300px, 70%, 700px);
   /* min-height: 100vh; */
-  height: 45%;
-  background-color: #303030;
-  margin: 0 auto;
+  height: 65%;
+  overflow-y: auto;
+
+  padding: 2rem;
+
+  margin: 5rem auto;
+  border: none;
+  border-radius: 15px;
 }
 
-.book-form::backdrop {
+form {
+  display: grid;
+
+  grid-template-rows: repeat(6, auto);
+}
+
+.dialog-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  margin-bottom: 2rem;
+}
+
+.dialog-header button {
+  align-self: flex-start;
+
+  position: relative;
+  bottom: 1rem;
+  left: 1rem;
+}
+
+.form_title {
+  font-size: 2.2rem;
+  width: 58.5%;
+
+  text-align: center;
+}
+
+.form_row {
+  grid-column: 1;
+  grid-row: 2 span 5;
+  padding: 0.8rem;
+  /* outline: 1px solid red; */
+  width: 70%;
+
+  place-self: center;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  /* outline: 1px solid red; */
+}
+
+.form_row label {
+  grid-row: 1;
+  padding-bottom: 0.4rem;
+
+  /* width: 100px; */
+  vertical-align: top;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+form input[type="text"],
+input[type="number"] {
+  appearance: none;
+  border: none;
+  outline: none;
+
+  border: 1px solid #ddd;
+}
+
+.form_row input[type="text"] {
+  width: 100%;
+  min-width: 100%;
+  grid-row: 2;
+  padding: 0.4rem 0.6rem;
+
+  font-size: 1.2rem;
+  border-radius: 5px;
+}
+
+.form_row input[type="number"] {
+  grid-row: 2;
+  width: 30%;
+  min-width: 20%;
+  padding: 0.4rem 0.6rem;
+
+  font-size: 1.2rem;
+  border-radius: 5px;
+}
+
+.checkbox_container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+input[type="checkbox"] {
+  width: 20px;
+  height: 20px;
+  position: relative;
+  bottom: 2px;
+}
+
+.close_btn {
+  height: 25px;
+
+  /* margin-top: 0.8rem; */
+}
+
+.btn_container {
+  grid-column: 1;
+  grid-row: 6;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  gap: 2rem;
+  /* padding: 2rem; */
+}
+
+.form_btn {
+  margin-top: 2rem;
+  padding: 0.5rem 0.6rem;
+  width: 6rem;
+  min-width: 3rem;
+}
+
+.book_form::backdrop {
   backdrop-filter: blur(3px);
 }
 
